--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="Resources/Logo/WhatsApp Image 2022-07-20 at 13.19.18.jpeg">
     <title>DCL</title>
 </head>
@@ -12,6 +13,7 @@
     <header>
         <nav class="navbar">
             <a href="#"><img src="Resources/Logo/WhatsApp Image 2022-07-20 at 13.19.18.jpeg" alt="logo"></a>
+            <box-icon name='menu'></box-icon>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">ACCUEIL</a>
@@ -26,9 +28,9 @@
                     <a href="#" class="nav-link">CONTACT</a>
                 </li>
             </ul>
+            
         </nav>
     </header>
-   
 
     <script src=""></script>
 </body>
