--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="Resources/Logo/WhatsApp Image 2022-07-20 at 13.19.18.jpeg">
     <title>DCL</title>
 </head>
@@ -13,7 +13,6 @@
     <header>
         <nav class="navbar">
             <a href="#"><img src="Resources/Logo/WhatsApp Image 2022-07-20 at 13.19.18.jpeg" alt="logo"></a>
-            <box-icon name='menu'></box-icon>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">ACCUEIL</a>
@@ -27,9 +26,10 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">CONTACT</a>
                 </li>
-            </ul>
-            
+            </ul>  
+            <i class="fa-solid fa-bars"></i>  
         </nav>
+        
     </header>
 
     <script src=""></script>
