--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#"><img src="Resources/Logo/WhatsApp Image 2022-07-20 at 13.19.18.jpeg" alt="logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">ACCUEIL</a>
+                    <a href="#" class="active">ACCUEIL</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">A PROPOS</a>
@@ -32,6 +32,6 @@
         
     </header>
 
-    <script src=""></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
